restyling the whole portfolio

--- a/index.html
+++ b/index.html
@@ -8,66 +8,51 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script src="https://kit.fontawesome.com/caeb9ec53e.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Abass.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <header>
 
+    <!--Header section begins here-->
+   <!-- <header>
         <div>
             <ul class="flex items-center space-x-4 pr-5 flex-wrap text-lg font-bond">
-                <li class="flex-1 select-none rounded-full hover:cursor-pointer"><img src="Abass-log.jpg" alt="logo"
-                        width="50" height="10"></li>
+                <li class="flex-1 select-none rounded-full hover:cursor-pointer pl-20"><img src="media/Abass-log.jpg" alt="logo" width="50" height="10"></li>
                 <li class="navlinks hover:text-orange-600"><a href="#home">Home</a></li>
                 <li class="navlinks hover:text-orange-600"><a href="#about">About</a></li>
                 <li class="navlinks hover:text-orange-600"><a href="#work">Portfolio</a></li>
-                <!--<li class="navlinks hover:text-orange-600"><a href="#">Services</a></li>-->
                 <li class="navlinks hover:text-orange-600"><a href="#myskills">Skills</a></li>
                 <li class="navlinks hover:text-orange-600"><a
                         href="https://drive.google.com/file/d/10D-lxIbFUOUchOydGelhkVbL8Px-PUJx/view?usp=sharing">Resume</a>
                 </li>
                 <li class="navlinks hover:text-orange-600"><a href="#contact">Contact</a></li>
-
-
             </ul>
         </div>
+    </header> -->
+    <!--Header section ends here-->
 
-        <!--Logo part start here-->
-        <!-- <div class="pt-5 pl-20 md:pt-8 md:pl-40 ">
-            <img src="logo.png" alt="" class="h-12 md:h-12 rounded-full md:hover:cursor-pointer">
-        </div>-->
-        <!--logo section ends-->
-
-        <!--navigation section starts-->
-        <!--<div class="bg-white-700 h-16 pl-4 text-black-800 md:text-lg">
-            <ul class="flex justify-end mr-16 pr-0 pt-0 md:mr-2">-->
-
-        <!--<i class="fas fa-bars"></i>-->
-        <!--<li class="mr-1 mt-5 hover:text-orange-600 md:mr-4 mt-5"><a href="#home">Home</a></li>
-                <li class="mr-1 mt-5 hover:text-orange-600 md:mr-4 mt-5"><a href="#about">About</a></li>
-                <li class="mr-1 mt-5 hover:text-orange-600 md:mr-4 mt-5"><a href="#work">Portfolio</a></li>
-                <li class="mr-1 mt-5 hover:text-orange-600 md:mr-4 mt-5"><a href="#">Services</a></li>
-                <li class="mr-1 mt-5 hover:text-orange-600 md:mr-4 mt-5"><a href="#myskills">Skills</a></li>
-                <li class="mr-1 mt-5 hover:text-orange-600 md:mr-4 mt-5"><a
-                        href="https://docs.google.com/document/d/10B2J8R2_R_yzutHWYeI1Aa3SpXLnzrrmtYBpFDzTS6k/edit?usp=sharing">Resume</a>
-                </li>
-                <li class="mr-1 mt-5 text-blue-800 md:mr-4 md:mt-5"><a href="#contact">Contact</a></li>
-            </ul>
-
-        </div>-->
-        <!--Navigation section ends-->
-
-
-    </header>
+    <!-- Navigation Menu start here-->
+  <nav>
+    <ul class="list-none flex items-center space-x-5 flex-wrap pr-36 text-lg text-white bg-gray-600 h-20 font-bold">
+        <li class="flex-1 rounded-full hover:cursor-pointer pl-20">
+        <a href="https://github.com/kukuabassanimeri" rel="noopener" target="_blank" class="animate-pulse">AK <br>Full-Stack Developer</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="#home">Home</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="#about">About</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="#work">Portfolio</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="#myskills">Skills</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/10D-lxIbFUOUchOydGelhkVbL8Px-PUJx/view?usp=sharing">Resume</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+<!--Navigation menu ends here-->
 
 
     <!--Welcome message starts here-->
-
     <div class="md:grid grid-cols-2 md:gap-x-64 pb-32">
         <div id="home" class="pl-4 text-black-800 pt-2 pl-2 md:pl-40">
             <h1 class="text-orange-600  md:text-3xl">Hey, I am </h1>
             <h1 class="text-xl text-black-600  pt-2 md:text-5xl">Abass Kuku</h1>
-            <p class="text-blue-800  pt-2 text-base md:text-xl">A Junior Web developer from <span
+            <p class="text-blue-800  pt-2 text-base md:text-xl">A Junior software developer from <span
                     class="text-green-600">Nairobi</span></p>
 
             <div class="pt-5 text-gray-600 text-lg">
@@ -78,15 +63,13 @@
 
                 <p>Delve into my portfolio and embark on a journey through the wonders of software development where
                     creativity
-                    meets technology, and possibilities are endless.</p>
-
-                <p>I invite you to explore my projects, discover my skills and witness the magic that unfolds when
+                    meets technology, and possibilities are endless. I invite you to explore my projects, discover my skills and witness the magic that unfolds when
                     passion
                     meets expertise.</p>
             </div>
         </div>
         <div class="pl-4 md:flex justify-end pr-20 pt-20">
-            <img src="skills.jpg" alt="image" width="300" class="rounded-full hover:cursor-pointer" id="skills"
+            <img src="media/skills.jpg" alt="image" width="300" class="rounded-full hover:cursor-pointer" id="skills"
                 onmouseover="setNewimage()" onmouseout="setOldimage()">
         </div>
     </div>
@@ -134,12 +117,12 @@
 
 
     <div class="grid grid-cols-3 gap-10 pt-5 pl-4 hover:cursor-pointer md:pl-40 md:grid grid-cols-2 md:gap-10">
-        <img src="Abass.jpg" alt="image" class="w-full aspect-square">
-        <img src="latjor.webp" alt="image" class="w-full aspect-video">
-        <img src="Abass.jpg" alt="image" class="w-full aspect-square">
-        <img src="Abass.jpg" alt="image" class="w-full aspect-square">
-        <img src="Abass.jpg" alt="image" class="w-full aspect-square ">
-        <img src="Abass.jpg" alt="image" class="w-full aspect-square ">
+        <img src="media/Abass.jpg" alt="image" class="w-full aspect-square">
+        <img src="media/latjor.webp" alt="image" class="w-full aspect-video">
+        <img src="media/Abass.jpg" alt="image" class="w-full aspect-square">
+        <img src="media/Abass.jpg" alt="image" class="w-full aspect-square">
+        <img src="media/Abass.jpg" alt="image" class="w-full aspect-square ">
+        <img src="media/Abass.jpg" alt="image" class="w-full aspect-square ">
 
     </div>
 
@@ -161,12 +144,7 @@
                     my skills with evolving trends to deliver impactful design solutions.
                 </p>
                 <p class="pt-5 text-orange-600 text-lg">Skills</p>
-                <!--<p>HTML</p>
-                <p>CSS</p>
-                <p>TAILWIND CSS</p>
-                <p>WORDPRESS</p>
-                <p>WIX</p>-->
-
+            
                 <div class="skills">
                     <!--html  start-->
                     <h2 class="text-gray-600 text-lg tracking-wide">HTML5</h2>
@@ -251,18 +229,13 @@
     <!--footer section begins-->
     <footer id="contact" class="bg-ed-800">
         <div class="pl-4 md:text-center font-bold ">
-            <!--<h1>Let's build something amazing together!</h1>-->
         </div>
 
 
         <!--Location information-->
         <div class="pt-20">
             <p class="pl-4 md:text-center text-orange-600 text-lg">Connect with me</p>
-            <p class="md:text-center text-gray-600 text-lg pl-4">Please Fill out this form for more information or
-                contact me
-                through
-                the
-                following details</p>
+            <p class="md:text-center text-gray-600 text-lg pl-4">Please Fill out this form for more information or contact me through the following details</p>
         </div>
         <div class="pl-4 md:flex items-center justify-between">
             <div class="text-xl md:pl-40">
@@ -366,18 +339,18 @@
 
 <script type="text/javascript">
     function setNewimage() {
-        document.getElementById("skills").src = "kuku.jpg";
+        document.getElementById("skills").src = "media/kuku.jpg";
     }
 
     function setOldimage() {
-        document.getElementById("skills").src = "skills.jpg";
+        document.getElementById("skills").src = "media/skills.jpg";
     }
 
     function image1() {
-        document.getElementById("image").src = "image1.jpg";
+        document.getElementById("image").src = "media/image1.jpg";
     }
 
     function image2() {
-        document.getElementById("image").src = "image2.jpg";
+        document.getElementById("image").src = "media/image2.jpg";
     }
 </script>
