--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     
     <div id="about" class="md:grid grid-cols-2 bg-gray-600 text-white pb-10">
 
-        <div class="pl-4 ">
-            <img src="media/coding.jpg" alt="image" width="500px" class="rounded hover:cursor-pointer mt-10" id="skills">
+        <div class="pl-4">
+            <img src="media/coding.jpg" alt="image" width="500px" height="10px" class="rounded hover:cursor-pointer md:mt-10  pt-10 pr-20" id="skills">
         </div>
         <div class="pl-4 text-lg pr-20 md:pl-20 pt-10">
             <p>
