working on the about image

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
 
             <div>
-               <img src="media/WritingProject.jpg" alt="skills" height="10" width="400" id="image" class="rounded pt-10 hover:cursor-pointer pl-4"> 
+               <img src="media/WritingProject.jpg" alt="skills" height="10" width="400" id="image" class="rounded pt-10 hover:cursor-pointer pl-4 pr-20"> 
             </div>
         </div>
     </div>
@@ -187,7 +187,7 @@
             </div>
 
             <!--form starts-->
-            <div class="pr-20 pt-5 text-lg pl-4">
+            <div class="pr-20 pt-5 text-lg pl-4 md:pr-20">
                 <p class="font-bold">Please Fill out this form for more information or contact me through the following details</p>
                 <form>
                     <p class="text-gray-600">Firstname:</p>
