working on the form

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="https://github.com/kukuabassanimeri" rel="noopener" target="_blank" class="animate-pulse">AK <br>Full-Stack Developer</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#home">Home</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#about">About</a></li>
-        <li class="animate-pulse navlinks hover:text-orange-600"><a href="#work">Portfolio</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="#work">Projects</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#myskills">Skills</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/10D-lxIbFUOUchOydGelhkVbL8Px-PUJx/view?usp=sharing">Resume</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/10D-lxIbFUOUchOydGelhkVbL8Px-PUJx/view?usp=sharing">Certification</a></li>
@@ -41,7 +41,7 @@
             <p class="font-bold pt-2 text-base md:text-xl">A Junior full-stack developer <br>from Nairobi</p>
         </div>
         <div class="pl-4 md:flex justify-end pr-20 pt-20">
-            <img src="media/image2.jpg" alt="image" width="300" class="rounded-full hover:cursor-pointer" id="skills" >
+            <img src="media/image2.jpg" alt="image" width="300px" class="rounded-full hover:cursor-pointer" id="skills" >
         </div>
     </div>
 
@@ -78,8 +78,8 @@
     <!--Projects start here-->
     
     <div id="work">
-        <h1 class="pl-4 font-bold pt-10 text-lg md:pl-20 ">I invite you to check out my portfolio to learn
-            more about my work and projects. <br>
+        <h1 class="pl-4 font-bold pt-10 text-lg md:pl-20 ">I invite you to check out my projects to learn
+            more about my work. <br>
         </h1>
     </div>
 
@@ -185,10 +185,11 @@
                     <span class="text-gray-600">+254115207210</span>
                 </p>
             </div>
-
+            
             <!--form starts-->
+            <!--
             <div class="pr-20 pt-5 text-lg pl-4 md:pr-20">
-                <p class="font-bold">Please Fill out this form for more information or contact me through the following details</p>
+                <p class="font-bold">Please Fill out this form for more information</p>
                 <form>
                     <p class="text-gray-600">Firstname:</p>
                     <p><input type="text" name="firstname" size="50" class="rounded" style="width: 400px;"
@@ -210,6 +211,7 @@
                     <button type="submit" name="submit" class="rounded-full">Submit</button>
                 </form>
             </div>
+        -->
             <!--form ends-->
 
         </div>
