removed the form section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav>
     <ul class="list-none flex flex-col md:flex-row items-center space-y-5 md:space-y-0 md:space-x-5 pr-36 text-lg text-white bg-gray-600 font-bold">
         <li class="flex-1 rounded-full hover:cursor-pointer pl-20">
-        <a href="https://github.com/kukuabassanimeri" rel="noopener" target="_blank" class="animate-pulse">AK <br>Full-Stack Developer</a></li>
+        <a href="https://github.com/kukuabassanimeri" rel="noopener" target="_blank" class="animate-pulse hidden sm:inline">AK <br>Full-Stack Developer</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#home">Home</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#about">About</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#work">Projects</a></li>
@@ -53,7 +53,7 @@
     <div id="about" class="md:grid grid-cols-2 bg-gray-600 text-white pb-10">
 
         <div class="pl-4">
-            <img src="media/coding.jpg" alt="image" width="500px" height="10px" class="rounded hover:cursor-pointer md:mt-10  pt-10 pr-20" id="skills">
+            <img src="media/coding.jpg" alt="image" class="rounded hover:cursor-pointer pt-10 pr-20" id="skills">
         </div>
         <div class="pl-4 text-lg pr-20 md:pl-20 pt-10">
             <p>
@@ -255,8 +255,8 @@
 
 
         <!--copyright starts-->
-        <div class=" bg-gray-600 mt-10 pb-10">
-            <div class="md:text-white">
+        <div class=" bg-gray-600 mt-10 pb-10 text-white">
+            <div class="sm:text-white md:text-white">
                 <p class="text-center pt-16 text-lg">Copyright © 2024 All Rights Reserved | <br>This Portfolio was design
                     with <i class="fas fa-heart text-blue-600"></i> by <span>Abass Kuku
                         Animeri</span><br><span>Full-stack Enthusiast</span></p>
