restructured the whole portfolio

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 md:pr-20 pt-5 pl-4 pr-4 flex-wrape md:pl-20 md:gap-10">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 md:pr-20 pt-5 pl-4 pr-4 text-lg flex-wrape md:pl-20 md:gap-10">
         <p><span class="font-bold">Abass Kuku Animeri</span><br>
             <a href="https://github.com/kukuabassanimeri/portfolio" class="underline">Portfolio</a>
         </p>
@@ -135,7 +135,7 @@
         <div class="md:grid grid-cols-2 md:gap-x-64">
             <div class="pl-4 pt-5 md:pl-20">
                 <h1 class="">Programming is more than a passion!</h1>
-                <p class="text-lg  pt-3 ">I actively cultivate my programming skills to ensuring that they align with current business trends by bridging the gap between creativity and innovation</p>
+                <p class="text-lg  pt-3 ">I actively cultivate my programming skills each day to ensure they align with current business trends by bridging the gap between creativity and innovation</p>
                 
                 <br>
                 <p class="font-bold">Skills and Langauges</p>
@@ -219,11 +219,10 @@
         <!--Location information ends-->
 
         <!--remote connection starts-->
-        <div class="pl-4 text-gray-600 text-lg md:pl-20">
-            <p>Do you want to connect with me remotely? <br>Do not hesitate to click any of the links below</p>
+        <div class="pl-4 text-lg md:pl-20 pt-5">
+            <p>Do not hesitate to click any of the links below so that we meet up</p>
         </div>
-
-        <div class=" pl-4 pt-5 md:pl-20 font-bold md:text-lg md:pt-5">
+        <div class=" pl-4 pt-5 md:pl-20 font-bold text-xl md:pt-5">
             <p>Social links</p>
         </div>
         <div class="pl-4 text-blue-400 space-x-4 pt-3 md:pl-20 md:text-2xl md:text-blue-400 md:space-x-6">
