--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 
     <!--Skills start here-->
     
-    <div id="myskills " class="bg-gray-600 text-white text-lg mt-10 pb-20">
+    <div id="myskills" class="bg-gray-600 text-white text-lg mt-10 pb-20">
         <div class="md:grid grid-cols-2 md:gap-x-64">
             <div class="pl-4 pt-5 md:pl-20">
-                <h1 class="">Programming is more than a passion!</h1>
+                <h1 class="font-bold">Programming is more than a passion!</h1>
                 <p class="text-lg  pt-3 ">I actively cultivate my programming skills each day to ensure they align with current business trends by bridging the gap between creativity and innovation</p>
                 
                 <br>
@@ -225,7 +225,7 @@
         <div class=" pl-4 pt-5 md:pl-20 font-bold text-xl md:pt-5">
             <p>Social links</p>
         </div>
-        <div class="pl-4 text-blue-400 space-x-4 pt-3 md:pl-20 md:text-2xl md:text-blue-400 md:space-x-6">
+        <div class="pl-4 text-blue-400 space-x-4 pt-3 md:pl-20 md:text-lg md:text-blue-400 md:space-x-6">
             <a href="https://www.facebook.com/profile.php?id=100085325694633"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://github.com/kukuabassanimeri"><i class="fa-brands fa-github"></i></a>
             <a href="https://twitter.com/kuku_abass"><i class="fa-brands fa-twitter"></i></a>
