--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!--Projects start here-->
     
     <div id="work">
-        <h1 class="pl-4 font-bold pt-10 text-lg md:pl-20 ">I invite you to check out my projects to learn
+        <h1 class="pl-4 font-bold pt-10 text-lg md:pl-20 ">Check out my projects to learn
             more about my work. <br>
         </h1>
     </div>
