added the certification content

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#about">About</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#work">Projects</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#myskills">Skills</a></li>
-        <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/10D-lxIbFUOUchOydGelhkVbL8Px-PUJx/view?usp=sharing">Resume</a></li>
-        <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/10D-lxIbFUOUchOydGelhkVbL8Px-PUJx/view?usp=sharing">Certification</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/10D-lxIbFUOUchOydGelhkVbL8Px-PUJx/view?usp=sharing" rel="noopener" target="_blank">Resume</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/drive/folders/1Og34c-SRHJ6J2FR4quD7Dd8ioM-fRQCE?usp=drive_link" rel="noopener" target="_blank">Certification</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#contact">Contact</a></li>
     </ul>
 </nav>
@@ -87,6 +87,8 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 md:pr-20 pt-5 pl-4 pr-4 text-lg flex-wrape md:pl-20 md:gap-10">
         <p><span class="font-bold">Abass Kuku Animeri</span><br>
             <a href="https://github.com/kukuabassanimeri/portfolio" class="underline">Portfolio</a>
+            <br>
+            <a href="https://kice.kotsum.co.ke/" class="underline">Managing KICE Blog</a>
         </p>
         
 
@@ -111,7 +113,7 @@
             <a href="https://github.com/kukuabassanimeri/PLP-Web-Technologies" class="underline">Plp-Web-Technologies</a>
         </p>
 
-        <p> <span class="font-bold">Power Learn Project</span>
+        <p> <span class="font-bold">Power Learn Project Hackathons</span>
             <br>
             <a href="https://github.com/kukuabassanimeri/PLP-HACKATHON1-2024" class="underline">Plp Hackathon-1-2024</a>
             <br>
@@ -146,6 +148,7 @@
                          <ul class="list-disc pl-8">
                              <li>Scripting languages: HTML, Css, TailwindCss</li>
                              <li>Back-end languages: Python, Dgango, Visual Basic, C++, Dart</li>
+                             <li>Content Management Systems: WordPress</li>
                              <li>Version Control: git & Github</li>
                          </ul>
                         
