added the certification content

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
 
             <div>
-               <img src="media/WritingProject.jpg" alt="skills" height="10" width="400" id="image" class="rounded pt-10 hover:cursor-pointer pl-4 pr-20"> 
+               <img src="media/WritingProject.jpg" alt="skills" id="image" class="rounded pt-10 hover:cursor-pointer pl-4 pr-20"> 
             </div>
         </div>
     </div>
