added the certification content

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
     <div id="work">
         <h1 class="pl-4 font-bold pt-10 text-lg md:pl-20 ">Check out my projects to learn
-            more about my work. <br>
+            more. <br>
         </h1>
     </div>
 
