modified the project list

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <a href="https://github.com/kukuabassanimeri/PLP-Web-Technologies" class="underline">Plp-Web-Technologies</a>
         </p>
 
-        <p> <span class="font-bold">Power Learn Project Hackathons</span>
+        <p> <span class="font-bold">Power Learn Project <br>Hackathons</span>
             <br>
             <a href="https://github.com/kukuabassanimeri/PLP-HACKATHON1-2024" class="underline">Plp Hackathon-1-2024</a>
             <br>
