Added plp final project

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             <a href="https://github.com/kukuabassanimeri/PLP-HACKATHON1-2024" class="underline">Plp Hackathon-1-2024</a>
             <br>
             <a href="https://github.com/kukuabassanimeri/PythonHackathon2" class="underline">PlpPythonHackathon-2-2024</a>
+            <br>
+            <a href="https://github.com/kukuabassanimeri/MedEase" class="underline">Final Project-MedEase</a>
         </p>
 
         <p><span class="font-bold">Integrating ApIs</span>
