Added plp final project

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#work">Projects</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#myskills">Skills</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/1-4ycNiGFkOUnm-ZizJPlsw4yhBuLRwro/view?usp=sharing" rel="noopener" target="_blank">Resume</a></li>
-        <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/drive/folders/1Og34c-SRHJ6J2FR4quD7Dd8ioM-fRQCE?usp=drive_link" rel="noopener" target="_blank">Certification</a></li>
+        <li class="animate-pulse navlinks hover:text-orange-600"><a href="https://drive.google.com/file/d/1BLCRia-kvicTF2KWIK7Ipu4Y3XdedB2_/view?usp=sharing" rel="noopener" target="_blank">Certification</a></li>
         <li class="animate-pulse navlinks hover:text-orange-600"><a href="#contact">Contact</a></li>
     </ul>
 </nav>
