--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
     <div id="about" class="md:grid grid-cols-2 bg-gray-600 text-white pb-10">
 
-        <div class="pl-4">
+        <div class="pl-4 md:pl-20">
             <img src="media/coding.jpg" alt="image" class="rounded hover:cursor-pointer pt-10 pr-20" id="skills">
         </div>
         <div class="pl-4 text-lg pr-20 md:pl-20 pt-10">
