--- a/index.html
+++ b/index.html
@@ -194,24 +194,24 @@
             
             <!--form starts-->
             
-            <div class="pr-20 pt-5 text-lg pl-4 md:pr-20">
-                <p class="font-bold">Please Fill out this form for more information</p>
+            <div class="pt-5 text-lg pl-4 md:pr-56">
+                <p class="font-bold">Contact Form</p>
                 <form>
                     <p class="text-gray-600">Firstname:</p>
-                    <p><input type="text" name="firstname" size="50" class="rounded" style="width: 300px;"
+                    <p><input type="text" name="firstname" size="50" class="rounded" style="width: 400px;"
                             placeholder="Firstname"></p>
                     <p class="text-gray-600">Lastname: </p>
-                    <p><input type="text" name="lastname" size="50" class="rounded" style="width: 300px;"
+                    <p><input type="text" name="lastname" size="50" class="rounded" style="width: 400px;"
                             placeholder="lastname"></p>
                     <p class="text-gray-600">Phone number:</p>
-                    <p><input type="number" name="number" size="70" class="rounded" style="width: 300px;"
+                    <p><input type="number" name="number" size="70" class="rounded" style="width: 400px;"
                             placeholder="contact"></p>
                     <p class="text-gray-600">Email:</p>
-                    <p><input type="email" name="email" size="50" class="rounded" style="width: 300px;"
+                    <p><input type="email" name="email" size="50" class="rounded" style="width: 400px;"
                             placeholder="Email"></p>
 
                     <p class="text-gray-600">Leave message below</p>
-                    <p><textarea cols="52" rows="5" class="rounded" style="width: 300px;"
+                    <p><textarea cols="52" rows="5" class="rounded" style="width: 400px;"
                             placeholder="Message here"></textarea></p>
 
                     <button type="submit" name="submit" class="rounded-full">Submit</button>
