--- a/index.html
+++ b/index.html
@@ -196,25 +196,22 @@
             
             <div class="pt-5 text-lg pl-4 md:pr-56">
                 <p class="font-bold">Contact Form</p>
-                <form>
-                    <p class="text-gray-600">Firstname:</p>
-                    <p><input type="text" name="firstname" size="50" class="rounded w-96 w-40"
-                            placeholder="Firstname"></p>
-                    <p class="text-gray-600">Lastname: </p>
-                    <p><input type="text" name="lastname" size="50" class="rounded w-96 w-40" 
-                            placeholder="lastname"></p>
+                <form >
+                    <p class="text-gray-600">Name:</p>
+                    <p><input type="text" name="Name" size="50" class="rounded w-96 w-40"
+                            placeholder="Name"></p>
                     <p class="text-gray-600">Phone number:</p>
                     <p><input type="number" name="number" size="70" class="rounded w-96 w-40 " 
                             placeholder="contact"></p>
                     <p class="text-gray-600">Email:</p>
-                    <p><input type="email" name="email" size="50" class="rounded w-96 w-40 " 
+                    <p><input type="email" name="Email" size="50" class="rounded w-96 w-40 " 
                             placeholder="Email"></p>
 
                     <p class="text-gray-600">Leave message below</p>
                     <p><textarea cols="52" rows="5" class="rounded w-96 w-40"
-                            placeholder="Message here"></textarea></p>
+                            placeholder="Message"></textarea></p>
 
-                    <button type="submit" name="submit" class="rounded-full">Submit</button>
+                    <button type="submit" name="Message" class="rounded-full">Submit</button>
                 </form>
             </div>
         
