--- a/index.html
+++ b/index.html
@@ -198,17 +198,17 @@
                 <p class="font-bold">Contact Form</p>
                 <form >
                     <p class="text-gray-600">Name:</p>
-                    <p><input type="text" name="Name" size="50" class="rounded w-96 w-40"
+                    <p><input type="text" name="Name" size="50" class="rounded md:w-96 w-40"
                             placeholder="Name"></p>
                     <p class="text-gray-600">Phone number:</p>
-                    <p><input type="number" name="number" size="70" class="rounded w-96 w-40 " 
+                    <p><input type="number" name="number" size="70" class="rounded md:w-96 w-40 " 
                             placeholder="contact"></p>
                     <p class="text-gray-600">Email:</p>
-                    <p><input type="email" name="Email" size="50" class="rounded w-96 w-40 " 
+                    <p><input type="email" name="Email" size="50" class="rounded md:w-96 w-40 " 
                             placeholder="Email"></p>
 
                     <p class="text-gray-600">Leave message below</p>
-                    <p><textarea cols="52" rows="5" class="rounded w-96 w-40"
+                    <p><textarea cols="52" rows="5" class="rounded md:w-96 w-40"
                             placeholder="Message"></textarea></p>
 
                     <button type="submit" name="Message" class="rounded-full">Submit</button>
