--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                     <p class="text-gray-600">Leave message below</p>
                     <p><textarea cols="52" rows="5" class="rounded md:w-96 w-80"
-                            placeholder="Message"></textarea></p>
+                            placeholder="Message" name="Message"></textarea></p>
 
                     <button type="submit" name="Message" class="rounded-full">Submit</button>
                 </form>
