--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <p><textarea cols="52" rows="5" class="rounded md:w-96 w-80"
                             placeholder="Message" name="Message"></textarea></p>
 
-                    <button type="submit" name="Message" class="rounded-full">Submit</button>
+                    <button type="submit" class="rounded-full">Submit</button>
                 </form>
             </div>
         
